# lappi

./: .dockerignore  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
lappi_core/: Cargo.toml  build.rs
lappi_core/src/: app_config.rs  database_api.rs  lib.rs  platform_api.rs  py_server_client.rs  settings.rs
lappi_core/src/collection/: database_api.rs  debug.rs  lyrics.rs  mod.rs
lappi_core/src/collection/artists/: mod.rs  types.rs
lappi_core/src/collection/folders/: database_api.rs  mod.rs  types.rs
lappi_core/src/collection/internal_files/: database_api.rs  mod.rs  types.rs
lappi_core/src/collection/jobs/: collection_migration.rs  collection_sync.rs  mod.rs
lappi_core/src/collection/lyrics/: database_api.rs  mod.rs  types.rs
lappi_core/src/collection/music/: database_api.rs  mod.rs  types.rs
lappi_core/src/collection/music_sources/: database_api.rs  mod.rs  types.rs
lappi_core/src/collection/pictures/: database_api.rs  mod.rs  types.rs
lappi_core/src/collection/playlists/: database_api.rs  debug.rs  mod.rs  types.rs
lappi_core/src/collection/storage/: local.rs
lappi_core/src/collection/tags/: database_api.rs  mod.rs  types.rs
lappi_core/src/collection/tree/: mod.rs  structure.rs
lappi_core/src/collection/types/: mod.rs  tags.rs
lappi_core/src/database/: api.rs  mod.rs
lappi_core/src/database/sqlite/: collection.rs  init.rs  mod.rs  playlists.rs  utils.rs
lappi_core/src/database/sqlite/collection/: folders.rs  internal_files.rs  lyrics.rs  mod.rs  music.rs  music_sources.rs  pictures.rs  playlists.rs  tags.rs
lappi_core/src/database/sqlite/utils/: artists.rs  lyrics.rs  mod.rs  nodes.rs  pictures.rs  tags.rs  tree.rs
lappi_core/src/debug/: configuration.rs  mod.rs
lappi_core/src/exploring/: mod.rs  py_source.rs
lappi_core/src/exploring/chat/: mod.rs
lappi_core/src/exploring/chat/chatgpt/: http_api.rs  mod.rs
lappi_core/src/exploring/chat/templates/: folder_templates.rs  mod.rs  music_item_templates.rs
lappi_core/src/exploring/lyrics/: mod.rs
lappi_core/src/exploring/lyrics/sources/: lyrics_ovh.rs  mod.rs
lappi_core/src/file_manager/: mod.rs  search.rs
lappi_core/src/import/collection/: basic.rs  basic_csv.rs  basic_yaml.rs  mod.rs  utils.rs
lappi_core/src/jobs/: mod.rs
lappi_core/src/metadata/: mod.rs  mp3.rs
lappi_core/src/playback/: events.rs  mod.rs  playlists.rs
lappi_core/src/playback/play_queue/: mod.rs  playlist_queue.rs
lappi_core/src/playback/players/: mod.rs
lappi_core/src/playback/players/vlc_http/: http_api.rs  mod.rs
lappi_core/src/playback/sources/: mod.rs
lappi_core/src/playlists/: classic.rs  database_api.rs  debug.rs  mod.rs
lappi_core/src/proto/: collection.rs  mod.rs
lappi_core/src/scripting_engine/: mod.rs
lappi_core/src/storage/: local.rs
lappi_core/src/storage/remote/: mod.rs
lappi_core/src/ui/: mod.rs
lappi_core/src/ui/utils/: mod.rs  songs_list.rs  ui_data.rs
lappi_core/src/utils/: hash.rs
lappi_core/src/workspace/: mod.rs
lappi_lab/lappi_lab/: Cargo.toml
lappi_lab/lappi_lab/src/: main.rs
lappi_lab/lappi_lab/src/platform_impl/: file_system.rs  mod.rs  platform_player.rs  playback.rs
(+128 files in other folders)
