[package]
name = "lappi_core"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
log = "0.4.19"
bincode = "1.3.3"
rand = "0.8.5"
num-traits = "0.2.16"
num-derive = "0.4.0"
tokio = { version = "1.30.0", features = ["full"] }
serde = { version="1.0.183", features=["derive"] }
yaml-rust = "0.4.5"
rusqlite = { version="0.29.0", features=["bundled"] }
id3 = "1.7.0"
minimp3 = "0.5.1"
base64 = "0.21.2"
serde_json = "1.0.104"
serde_yaml = "0.9.25"
threadpool = "1.8.1"
csv = "1.2.2"
walkdir = "2.3.3"
url = "2.4.1"
once_cell = "1.20.2"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
rhai = { version = "1.20.0", features = [ "serde" ] }
amina_core = { path = "../amina/amina_core" }
amina_core_derive = { path = "../amina/amina_core_derive" }
fallible-iterator = "0.2.0"
