[package]
name = "lappi_core"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
log = "0.4.25"
anyhow = "1.0.95"
thiserror = "2.0.11"
bincode = "1.3.3"
rand = "0.9.0"
num-traits = "0.2.19"
num-derive = "0.4.2"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version="1.0.217", features=["derive"] }
yaml-rust = "0.4.5"
protobuf = "3.7.2"
rusqlite = { version="0.33.0", features=["bundled"] }
fallible-iterator = "0.3.0"
id3 = "1.16.1"
base64 = "0.22.1"
serde_json = "1.0.138"
serde_yaml = "0.9.34"
threadpool = "1.8.1"
csv = "1.3.1"
walkdir = "2.5.0"
url = "2.5.4"
once_cell = "1.20.2"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
rhai = { version = "1.21.0", features = [ "serde" ] }
amina_core = { path = "../amina/amina_core" }
amina_core_derive = { path = "../amina/amina_core_derive" }

[build-dependencies]
protobuf-codegen = "3.7.2"
