[package]
name = "lappi_lab"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
futures = "0.3.28"
log = "0.4.19"
simple_logger = "4.2.0"
directories = "5.0.1"
serde = "1.0.183"
serde_json = "1.0.104"
amina_core = { path = "../../amina/amina_core" }
amina_server = { path = "../../amina/amina_server" }
lappi_core = { path = "../../lappi_core" }